<?xml version="1.0"?>
<package>
  <name>dual_ros_example</name>
  <version>0.0.0</version>
  <description>Dual ROS Example</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
          <!--              <build_type>ament_python</build_type> -->
  </export>
</package>

